assets/styles/default.scss
/* ... */
// lobby styling

.lobby {

	.margin-top {
	  	margin-top: 16px;
	}
	.room-container {
		.room-list-item {
		  	list-style: none;
			padding-right: 5px;
			padding-left: 5px;

			.room {
				height: 130px;
				border: 1px solid #ddd;
				box-shadow: 2px 2px 3px #eee;
				padding: 8px 8px 30px 8px;
				border-radius: 4px;
			  	margin-bottom: 10px;

			  	&:hover, &:focus {
				  box-shadow: inset 0px 0px 3px #eee;
				}

				.room-title {
				  	font-weight: 500;
				  	font-size: 16px;
				}

				.room-topic {
				  /* no styles */
				}

			  	.public-room-topic {
				  margin-top: 12px;
				}

				.last-message {
					max-width: 100%;
					height: 50px;
					overflow: hidden;
					margin-top: 2px;

					[am-time-ago] {
					  position: absolute;
					  top: 5px;
					  right: 30px;
					  font-size: 13px;
					}
				}

				.lobby-room-users {
				  	position: absolute;
					bottom: 10px;
					right: 12px;
					font-size: 20px;
				}
			}
		}
	}
}

.searchbar {
	margin: 15px 0 15px 0;
}

.search-result {
	margin-bottom: 5px;
}

// Mobile modifications

@media (max-width: 767px) { // xs is < 768px
	// lobby

	.lobby {
		padding-left: 0;
		padding-right: 0;

		.page-header {
			display: none;
		}
		.list-group-item {
			border-radius: 0;
			border-left: 0;
			border-right: 0;
		}
	}

	// message list

	.message-list {
		height: initial;
		overflow-y: scroll;
		position: fixed;
		top: 40px;
		bottom: 52px;
		left: 0;
		right: 0;
		background-color: #efefef;
		-webkit-overflow-scrolling: touch;
	}

	.message-list.has-topic {
		height: initial;
	}

	.animation-box, .topic {
		display: none;
	}

	.message, .message.local {
		overflow: hidden;
		background-color: transparent;
	}

	.message-author {
		float: left;
		width: 34px; // image 30px + online bar 4px
		padding: 0;
		margin-left: 6px;

		.name {
			display: none;
		}

		img {
			height: 30px;
			margin: 0;
			margin-left: 4px; // makes room for bar
			padding: 0;
		}

		.status {
			height: 30px;
			width: 4px;
			top: 0;
			left: 6px;
		}
	}

	.message-caret {
		left: 42px;
	}

	.message-body {
		display: inline-block;
		width: auto;
		max-width: calc(100% - 98px);
		margin: 0 9px 4px 9px;
		border: solid #ddd 1px;
		padding: 10px;
		word-break: break-word;

		.message-author-name {
			font-weight: bold;
		}

		.message-info {
			display: inline-block;
			position: initial;
			padding: 0;
			margin-left: 5px;
		}
	}

	// mods for local messages (goes to right side)
	.message.local {
		.message-author {
			float: right;
			margin-left: 0;
			margin-right: 6px;

			.status {
				top: 0;
				left: initial;
				right: 35px;
			}
		}
		.message-caret {
			left: initial;
			right: 42px;
			border-left: 8px solid #d9edf7;
			border-right: none;
		}
		.message-body {
			float: right;
			background-color: #d9edf7;
		}
	}

	// system message
	.system-message-body {
		width: auto;
		max-width: calc(100% - 100px);
		margin: 0 46px;

		[am-time-ago] {
			display: none;
		}
		.system-message {
			margin: 0;
			padding: 10px;
			background-color: transparent;
			color: black;
		}
	}

	.message:hover .fa-bookmark-o:not(.disabled) {
		display: none;
	}

	// input box in mobile
	.message-input {
		position: fixed;
		bottom: 0;
		width: 100vw;
		border-top: solid #aaa 1px;

		input, textarea {
			float: left;
			height: 48px;
			width: calc(100vw - 64px);
			border-radius: 0;
			border: 0;
			line-height: 36px;

			&:hover, &:focus {
				border: 0;
			}
		}

		button, span.btn {
			display: inline-block;
			float: right;
			width: 60px;
			height: 46px;
			background: white;
			border: 0;
			outline: none;
			color: #333;
			font-size: 15px;

			&:hover, &:focus, &:active {
				border: 0;
				background: white;
				color: #333;
			}
		}
	}

	.message-input span.btn {
		right: 60px;
	}
}

img.image-preview {
	max-height: 200px
}

// animations

@keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@-moz-keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@-webkit-keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@-o-keyframes fadein {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@keyframes fadeout {
	from {
		opacity: 1;
	}
	to {
		opacity: 0;
	}
}

@-moz-keyframes fadeout {
	from {
		opacity: 1;
	}
	to {
		opacity: 0;
	}
}

@-webkit-keyframes fadeout {
	from {
		opacity: 1;
	}
	to {
		opacity: 0;
	}
}

@-o-keyframes fadeout {
	from {
		opacity: 1;
	}
	to {
		opacity: 0;
	}
}

@-webkit-keyframes pulse {
	0% {
		-webkit-transform: scale(1);
	}
	50% {
		-webkit-transform: scale(1.2);
	}
	100% {
		-webkit-transform: scale(1);
	}
}

@keyframes pulse {
	0% {
		transform: scale(1);
	}
	50% {
		transform: scale(1.2);
	}
	100% {
		transform: scale(1);
	}
}

.mobile-upload-button {
	float: right;
	line-height: 42px;
	position: relative;
}

.mobile-upload-button button {
	height: 40px;
	padding: 4px 12px;
	display: inline-block;
	float: right;
	width: 60px;
	border: 0;
	outline: none;
	font-size: 15px;
	border-radius: 0px;
	line-height: 36px;
	background-color: transparent;
	color: #eee;
}

.mobile-upload-button input[type=file] {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	opacity: 0;
}

